Use List.of() in preference to Collections.singleton()